--- a/syasin.html
+++ b/syasin.html
@@ -27,27 +27,28 @@
 
 
 <img src="noindex/syasin_no_syasin/IMG_0972.JPG" width="250" height="350"><br>
+<a href="noindex/syasin_no_syasin/IMG_0972.JPG" download="1.jpg">ダウンロード</a>
 
-
-<img src="noindex/syasin_no_syasin/IMG_20221106_144818_01.jpg" width="350" height="250"><br>
-
+<img href="noindex/syasin_no_syasin/IMG_20221106_144818_01.jpg" width="350" height="250"><br>
+<a href="noindex/syasin_no_syasin/IMG_20221106_144818_01.jpg" download="2.jpg">ダウンロード</a>
 
 <img src="noindex/syasin_no_syasin/PXL_20230505_043530335.jpg" width="350" height="250"><br>
-
+<a href="noindex/syasin_no_syasin/PXL_20230505_043530335.jpg" download="3.jpg">ダウンロード</a>
 
 <img src="noindex/syasin_no_syasin/PXL_20230531_092559822.jpg" width="302" height="403"><br>
-
+<a href="noindex/syasin_no_syasin/PXL_20230531_092559822.jpg" download="4.jpg">ダウンロード</a>
 
 <img src="noindex/syasin_no_syasin/PXL_20230820_002508705.jpg" width="403" height="302"><br>
-
+<a href="noindex/syasin_no_syasin/PXL_20230820_002508705.jpg" download="5.jpg">ダウンロード</a>
 
 <img src="noindex/syasin_no_syasin/PXL_20231223_074405738.jpg" width="302" height="403"><br>
-
+<a href="noindex/syasin_no_syasin/PXL_20231223_074405738.jpg" download="6.jpg">ダウンロード</a>
 
 <img src="noindex/syasin_no_syasin/PXL_20240102_004227610.jpg" width="297" height="202"><br>
-
+<a href="noindex/syasin_no_syasin/PXL_20240102_004227610.jpg" download="7.jpg">ダウンロード</a>
 
 <img src="noindex/syasin_no_syasin/壁紙.jpg" width="297" height="202"><br>
+<a href="noindex/syasin_no_syasin/壁紙.jpg" download="8.jpg">ダウンロード</a>
 
 </body>
 
