--- a/syasin.html
+++ b/syasin.html
@@ -29,6 +29,7 @@
 <img src="noindex/syasin_no_syasin/IMG_0972.JPG" width="250" height="350"><br>
 <a href="noindex/syasin_no_syasin/IMG_0972.JPG" download="1.jpg">ダウンロード</a>
 
+<img scr="noindex/syasin_no_syasin/IMG_20221106_144818_01.jpg" width="350" height="250"><br>
 <a href="noindex/syasin_no_syasin/IMG_20221106_144818_01.jpg" download="2.jpg">ダウンロード</a>
 
 <img src="noindex/syasin_no_syasin/PXL_20230505_043530335.jpg" width="350" height="250"><br>
