--- a/syasin.html
+++ b/syasin.html
@@ -18,6 +18,7 @@
     <li class="top"><a href="index.html">トップ</a></li>
     <li><a href="hamprof.html">プロフィール</a></li>
     <li><a href="syasin.html">写真集</a></li>
+    <li><a href="kando.html">漢ド</a></li>
     </ul>
 </header>
 <br>
