--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="Content-Style-Type" content="text/css">
@@ -7,88 +8,37 @@
   <link rel="stylesheet" href="style/reset.css">
   <link rel="stylesheet" href="style/style.css">
 </head>
+
 <body>
 
-<header class="header">
-  <div class="navtext-container">
-    <div class="navtext"></div>
-  </div>
-  <input type="checkbox" class="menu-btn" id="menu-btn">
-  <label for="menu-btn" class="menu-icon"><span class="navicon"></span></label>
-  <ul class="menu">
-    <li class="top"><a href="index.html">トップ</a></li>
-    <li><a href="hamprof.html">プロフィール</a></li>
-    <li><a href="syasin.html">写真集</a></li>
-    <li><a href="kando.html">漢ド</a></li>
+  <header class="header">
+    <div class="navtext-container">
+      <div class="navtext"></div>
+    </div>
+    <input type="checkbox" class="menu-btn" id="menu-btn">
+    <label for="menu-btn" class="menu-icon"><span class="navicon"></span></label>
+    <ul class="menu">
+      <li class="top"><a href="index.html">トップ</a></li>
+      <li><a href="hamprof.html">プロフィール</a></li>
+      <li><a href="syasin.html">写真集</a></li>
+      <li><a href="kando.html">漢ド</a></li>
     </ul>
-</header>
+  </header>
 
-<!-- ほんへ -->
+  <!-- ほんへ -->
   <br>
   <br>
   <br>
   <br>
-  <br>
-  <div class="hutozi-center">ハムスターのホームページ</dev>
-  <div align="center">
-    <table>
-     <tbody>
-        <tr>
-          <br>
-          <td>
-          <div class="hutozi-center" align="center">あけましておめでとうございます</div>
-          </td>
-          <br>
-          <div class="hutozi-center">本年もよろしくお願いいたします。</font>
-        </tr>
-      </tbody>
-    </table>
-  <br>
-  </div>
-  <table align="center">
-  <tbody><tr>
-  <td rowspan="2"><img src="noindex/PXL_20231129_221440947-EDIT.jpg" width="350" height="304" border="0"><br>
-      <h>ハムスター(猫)<h><br>
-      <h>生年月日 12年5月</h><br>
-      <h>血液型 wuighuighi型<h><br>
-      mail:<a href="hahsdhaweuihfbpedafhpouswfe@asefiuy.com" target="_blank">info@userhuireghfhufuirid3.co.jp</a></td>
-          </tr>
-      </tbody></table>      
-      <br>
-        所属<strong>:</strong><br>
-       猫んこ<br>
-        0.47.056336768652-82455<br>
-        大日本帝国9-5-29 <br>
-        渋谷のロフト2757-545<br>
-        TEL : +51442646790-98723546 <br>
-        FAX : +05278652-77814369551 <br>
-     </td>
-    .hutozi-center
-     ・ケージ
-    </tr>
-        </tbody></table>
-        <table border="0" cellpadding="0">
-             <tbody><tr>
-             <td width="70" align="left" valign="top">&nbsp;</td>
-             <a href="https://www.google.co.jp/" target="_blank"><font size="4">Googleのやつ</a></font>
-    <br>
-    </strong>
-          １ お腹細くなった<br>
-          ２ 太った<br>
-          </td>
-     </tr>
-  </tbody></table>
 
-   <table width="100%" border="0" cellpadding="0">
-      <tbody><tr>
-        <td align="left" valign="bottom"><hr width="100%" size="1"></td>
-      </tr>
-  </tbody></table>
-<br>
-<b>当サイトの内容、テキスト、画像等の無断転載・無断使用を固く禁じます。<br>
-    また、まとめサイト等への引用を厳禁致します。<br>
-    お問い合わせはメールでご連絡をお願い致します。<br>
-<br>
-※最近、SNS上でねこを名乗るアカウントがあるといった“なりすまし”の報告が寄せられておりますが、ハムスター本人は一切行っておりませんので、ご注意ください</b>
+  <div class="hutozi-center">ホームページ</div>
+
+  <img src="noindex/PXL_20231129_221440947-EDIT.jpg" alt="EDIT.jpg"><br>
+
+  <center>
+    <div class="htz-center">mail:hswiauerfr@hiuhfi4h87huis.cn</div>
+  </center>
+
 </body>
+
 </html>
