--- a/hamprof.html
+++ b/hamprof.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="Content-Style-Type" content="text/css">
@@ -7,103 +8,37 @@
   <link rel="stylesheet" href="style/reset.css">
   <link rel="stylesheet" href="style/style.css">
 </head>
+
 <body>
 
-<header class="header">
-  <div class="navtext-container">
-    <div class="navtext"></div>
-  </div>
-  <input type="checkbox" class="menu-btn" id="menu-btn">
-  <label for="menu-btn" class="menu-icon"><span class="navicon"></span></label>
-  <ul class="menu">
-    <li class="top"><a href="index.html">トップ</a></li>
-    <li><a href="hamprof.html">プロフィール</a></li>
-    <li><a href="syasin.html">写真集</a></li>
-    <li><a href="kando.html">漢ド</a></li>
+  <header class="header">
+    <div class="navtext-container">
+      <div class="navtext"></div>
+    </div>
+    <input type="checkbox" class="menu-btn" id="menu-btn">
+    <label for="menu-btn" class="menu-icon"><span class="navicon"></span></label>
+    <ul class="menu">
+      <li class="top"><a href="index.html">トップ</a></li>
+      <li><a href="hamprof.html">プロフィール</a></li>
+      <li><a href="syasin.html">写真集</a></li>
+      <li><a href="kando.html">漢ド</a></li>
     </ul>
-</header>
+  </header>
 
-<!-- ほんへ -->
-<br>
-<br>
-<br>
-<br>
-<h2 align="center">あんみつのホームページ</h2>
-<img src="noindex/PXL_20231129_221440947-EDIT.jpg">
-<center>
-</center>
-<table width="752" align="center">
-  <tbody><tr> 
-    <td width="120" align="LEFT">本名<br>
-      <br>
-    </td>
-    <td align="LEFT">猫(あんみつ)<br>
-    <br></td>
-  </tr>
-  <tr> 
-    <td align="LEFT">生年月日<br>
-      <br></td>
-    <td align="LEFT">1964年12月5日<br>
-    <br></td>
-  </tr>
-  <tr> 
-    <td align="LEFT">血液型<br>
-      <br></td>
-    <td align="LEFT">wuighuighi 型<br>
-    <br></td>
-  </tr>
-  <tr> 
-    <td align="LEFT">出産地<br>
-      <br></td>
-    <td align="LEFT">チェコ<br>
-    <br></td>
-  </tr>
-  <tr> 
-    <td align="LEFT">学歴<br>
-    <br></td>
-    <td align="LEFT">プリン大学 お理工学部卒業<br>
-    <br></td>
-  </tr>
-  <tr> 
-    <td align="LEFT">サイズ<br>
-    <br></td>
-    <td align="LEFT">身長15cm体重30g靴1km<br>
-    <br></td>
-  </tr>
-  <tr>
-    <td align="LEFT">趣味<br>
-    <br></td>
-    <td align="LEFT">食事<br>
-    <br></td>
-  </tr>
-  <tr> 
-    <td align="LEFT"><div align="left">デビュー<br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-    </div></td>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br></td>
-  </tr>
+  <!-- ほんへ -->
+  <br>
+  <br>
+  <br>
+  <br>
+  <div class="hutozi-center">あんみつのホームページ</div>
+  <img src="noindex/PXL_20231129_221440947-EDIT.jpg">
+
+  <div class="htz-center">本名 : 蛹鈴㍽遘?譏</div>
+
+  <div class="htz-center">血液型 : AB</div>
+
+  <div class="htz-center">学歴 : 縺ｯ繧?縺ｭ縺薙☆縺?〓縺溘?繧後ｓ繝ｼ</div>
+
 </body>
+
 </html>
