--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
 
   <img src="noindex/PXL_20231129_221440947-EDIT.jpg" alt="EDIT.jpg"><br>
 
-  <center>
-    <div class="htz-center">mail:hswiauerfr@hiuhfi4h87huis.cn</div>
-  </center>
+  <div class="htz-center">mail:hswiauerfr@hiuhfi4h87huis.cn</div>
+  <div class="htz-center">血液型:AB</div>
 
 </body>
 
