--- a/syasin.html
+++ b/syasin.html
@@ -1,71 +1,81 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
+  <meta name="format-detection" content="telephone=no" />
   <meta charset="UTF-8">
   <meta http-equiv="Content-Style-Type" content="text/css">
   <title>ハムスターのホームページ</title>
   <link rel="stylesheet" href="style/reset.css">
   <link rel="stylesheet" href="style/style.css">
+  <link rel="icon" href="/noindex/favicon.jpg" />
 </head>
+
 <body>
-<header class="header">
-  <div class="navtext-container">
-    <div class="navtext"></div>
-  </div>
-  <input type="checkbox" class="menu-btn" id="menu-btn">
-  <label for="menu-btn" class="menu-icon"><span class="navicon"></span></label>
-  <ul class="menu">
-    <li class="top"><a href="index.html">トップ</a></li>
-    <li><a href="hamprof.html">プロフィール</a></li>
-    <li><a href="syasin.html">写真集</a></li>
-    <li><a href="/kando/kando.html">漢ド</a></li>
+  <header class="header">
+    <div class="navtext-container">
+      <div class="navtext"></div>
+    </div>
+    <input type="checkbox" class="menu-btn" id="menu-btn">
+    <label for="menu-btn" class="menu-icon"><span class="navicon"></span></label>
+    <ul class="menu">
+      <li class="top"><a href="index.html">トップ</a></li>
+      <li><a href="hamprof.html">プロフィール</a></li>
+      <li><a href="syasin.html">写真集</a></li>
+      <li><a href="/kando/kando.html">漢ド</a></li>
     </ul>
-</header>
-<br>
-<br>
-<br>
-<br>
+  </header>
+  <br>
+  <br>
+  <br>
+  <br>
 
 
-<img src="noindex/syasin_no_syasin/IMG_0972.JPG" width="250" height="350">
-<a href="noindex/syasin_no_syasin/IMG_0972.JPG" download="1.jpg">ダウンロード</a>
-<br>
-<br>
+  <img src="noindex/syasin_no_syasin/IMG_0972.JPG" width="250" height="350">
+  <a href="noindex/syasin_no_syasin/IMG_0972.JPG" download="1.jpg">ダウンロード</a>
+  <br>
+  <br>
 
-<img scr="noindex/syasin_no_syasin/IMG_20221106_144818_01.jpg" width="350" height="250">
-<a href="noindex/syasin_no_syasin/IMG_20221106_144818_01.jpg" download="2.jpg">ダウンロード</a>
-<br>
-<br>
+  <img src="noindex/syasin_no_syasin/IMG_20221106_144818_01.jpg" width="350" height="250">
+  <a href="noindex/syasin_no_syasin/IMG_20221106_144818_01.jpg" download="2.jpg">ダウンロード</a>
+  <br>
+  <br>
 
-<img src="noindex/syasin_no_syasin/PXL_20230505_043530335.jpg" width="350" height="250">
-<a href="noindex/syasin_no_syasin/PXL_20230505_043530335.jpg" download="3.jpg">ダウンロード</a>
-<br>
-<br>
+  <img src="noindex/syasin_no_syasin/PXL_20230505_043530335.jpg" width="350" height="250">
+  <a href="noindex/syasin_no_syasin/PXL_20230505_043530335.jpg" download="3.jpg">ダウンロード</a>
+  <br>
+  <br>
 
-<img src="noindex/syasin_no_syasin/PXL_20230531_092559822.jpg" width="302" height="403">
-<a href="noindex/syasin_no_syasin/PXL_20230531_092559822.jpg" download="4.jpg">ダウンロード</a>
-<br>
-<br>
+  <img src="noindex/syasin_no_syasin/PXL_20230531_092559822.jpg" width="302" height="403">
+  <a href="noindex/syasin_no_syasin/PXL_20230531_092559822.jpg" download="4.jpg">ダウンロード</a>
+  <br>
+  <br>
 
-<img src="noindex/syasin_no_syasin/PXL_20230820_002508705.jpg" width="403" height="302">
-<a href="noindex/syasin_no_syasin/PXL_20230820_002508705.jpg" download="5.jpg">ダウンロード</a>
-<br>
-<br>
+  <img src="noindex/syasin_no_syasin/PXL_20230820_002508705.jpg" width="403" height="302">
+  <a href="noindex/syasin_no_syasin/PXL_20230820_002508705.jpg" download="5.jpg">ダウンロード</a>
+  <br>
+  <br>
 
-<img src="noindex/syasin_no_syasin/PXL_20231223_074405738.jpg" width="302" height="403">
-<a href="noindex/syasin_no_syasin/PXL_20231223_074405738.jpg" download="6.jpg">ダウンロード</a>
-<br>
-<br>
+  <img src="noindex/syasin_no_syasin/PXL_20231223_074405738.jpg" width="302" height="403">
+  <a href="noindex/syasin_no_syasin/PXL_20231223_074405738.jpg" download="6.jpg">ダウンロード</a>
+  <br>
+  <br>
 
-<img src="noindex/syasin_no_syasin/PXL_20240102_004227610.jpg" width="297" height="202">
-<a href="noindex/syasin_no_syasin/PXL_20240102_004227610.jpg" download="7.jpg">ダウンロード</a>
-<br>
-<br>
+  <img src="noindex/syasin_no_syasin/PXL_20240102_004227610.jpg" width="297" height="202">
+  <a href="noindex/syasin_no_syasin/PXL_20240102_004227610.jpg" download="7.jpg">ダウンロード</a>
+  <br>
+  <br>
 
-<img src="noindex/syasin_no_syasin/壁紙.jpg" width="297" height="202">
-<a href="noindex/syasin_no_syasin/壁紙.jpg" download="8.jpg">ダウンロード</a>
-<br>
-<br>
+  <img src="noindex/syasin_no_syasin/壁紙.jpg" width="297" height="202">
+  <a href="noindex/syasin_no_syasin/壁紙.jpg" download="8.jpg">ダウンロード</a>
+  <br>
+  
+  <img src="/noindex/favicon.jpg" alt="" width="250" height="200">
+  <a href="/noindex/favicon.jpg" download="9.jpg"></a>
+
+  
+  <br>
+  <br>
 
 </body>
 
