--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
 
 <head>
+  <meta name="format-detection" content="telephone=no" />
   <meta charset="UTF-8">
   <meta http-equiv="Content-Style-Type" content="text/css">
   <title>ハムスターのホームページ</title>
+  <link rel="icon" href="/noindex/favicon.jpg" />
   <link rel="stylesheet" href="style/reset.css">
   <link rel="stylesheet" href="style/style.css">
+
 </head>
 
 <body>
@@ -33,7 +36,7 @@
 
   <div class="hutozi-center">ホームページ</div>
 
-  <img src="noindex/PXL_20231129_221440947-EDIT.jpg" alt="EDIT.jpg"><br>
+  <img src="/noindex/favicon.jpg" alt="EDIT.jpg"><br>
 
   <div class="htz-center">mail:hswiauerfr@hiuhfi4h87huis.cn</div>
   <div class="htz-center">血液型:AB</div>
