--- a/hamprof.html
+++ b/hamprof.html
@@ -2,11 +2,13 @@
 <html>
 
 <head>
+  <meta name="format-detection" content="telephone=no" />
   <meta charset="UTF-8">
   <meta http-equiv="Content-Style-Type" content="text/css">
   <title>ハムスターのホームページ</title>
   <link rel="stylesheet" href="style/reset.css">
   <link rel="stylesheet" href="style/style.css">
+  <link rel="icon" href="/noindex/favicon.jpg" />
 </head>
 
 <body>
@@ -31,7 +33,7 @@
   <br>
   <br>
   <div class="hutozi-center">あんみつのホームページ</div>
-  <img src="noindex/PXL_20231129_221440947-EDIT.jpg">
+  <img src="/noindex/favicon.jpg">
 
   <div class="htz-center">本名 : 蛹鈴㍽遘?譏</div>
 
