--- a/syasin.html
+++ b/syasin.html
@@ -22,7 +22,7 @@
       <li class="top"><a href="index.html">トップ</a></li>
       <li><a href="hamprof.html">プロフィール</a></li>
       <li><a href="syasin.html">写真集</a></li>
-      <li><a href="/kando/kando.html">漢ド</a></li>
+      <li><a href="Webrakugaki.html">落書き</a></li>
     </ul>
   </header>
   <br>
@@ -69,11 +69,11 @@
   <img src="noindex/syasin_no_syasin/壁紙.jpg" width="297" height="202">
   <a href="noindex/syasin_no_syasin/壁紙.jpg" download="8.jpg">ダウンロード</a>
   <br>
-  
+
   <img src="/noindex/favicon.jpg" alt="" width="250" height="200">
   <a href="/noindex/favicon.jpg" download="9.jpg"></a>
 
-  
+
   <br>
   <br>
 
