--- a/Webrakugaki.html
+++ b/Webrakugaki.html
@@ -11,15 +11,30 @@
   <link rel="icon" type="image/png" href="PXL_20231129_221440947-EDIT.jpg" />
   <script type="text/javascript" src="Webrakugaki/canvas.js"></script>
   <script src="Webrakgaki/easeljs-0.6.0.min.js"></script>
-
-
-
   <title>落書き</title>
 </head>
 
 <body style=" background-color: white;font-family:'Hiragino Sans' ">
 
+  <header class="header">
+    <div class="navtext-container">
+      <div class="navtext"></div>
+    </div>
+    <input type="checkbox" class="menu-btn" id="menu-btn">
+    <label for="menu-btn" class="menu-icon"><span class="navicon"></span></label>
+    <ul class="menu">
+      <li class="top"><a href="index.html">トップ</a></li>
+      <li><a href="hamprof.html">プロフィール</a></li>
+      <li><a href="syasin.html">写真集</a></li>
+      <li><a href="Webrakugaki.html">落書き</a></li>
+    </ul>
+  </header>
+
   <br>
+  <br>
+  <br>
+  <br>
+
   <button style="color:white;background-color:black;width:50px;height:50px;" onclick="black()">black</button>
   <button style="color:white;background-color:red;width:50px;height:50px;" onclick="red()">red</button>
 
