--- a/Webrakugaki.html
+++ b/Webrakugaki.html
@@ -8,7 +8,8 @@
   <link rel="icon" href="/noindex/favicon.jpg" />
   <meta charset="UTF-8">
   <meta http-equiv="Content-Language" content="ja">
-  <link rel="icon" type="image/png" href="PXL_20231129_221440947-EDIT.jpg" />
+  <link rel="stylesheet" href="style/reset.css">
+  <link rel="stylesheet" href="style/style.css">
   <script type="text/javascript" src="Webrakugaki/canvas.js"></script>
   <script src="Webrakgaki/easeljs-0.6.0.min.js"></script>
   <title>落書き</title>
@@ -40,7 +41,6 @@
 
   <br>
   <br>
-  -->
   <canvas id="myCanvas" width="3000" height="3000"
     style="width:2041px;height:1011px; color: #333333; background: #ffffff none repeat scroll 0% 0%; border: 1px solid #cccccc; "></canvas>
 
