--- a/Webrakugaki.html
+++ b/Webrakugaki.html
@@ -2,8 +2,6 @@
 <html lang="ja">
 
 <head>
-  <meta name="format-detection" content="telephone=no" />
-  <meta http-equiv="content-type" content="text/html; charset=Shift_JIS">
   <meta name="viewport" content="width=320">
   <link rel="icon" href="/noindex/favicon.jpg" />
   <meta charset="UTF-8">
@@ -27,7 +25,7 @@
       <li class="top"><a href="index.html">トップ</a></li>
       <li><a href="hamprof.html">プロフィール</a></li>
       <li><a href="syasin.html">写真集</a></li>
-      <li><a href="Webrakugaki.html">落書き</a></li>
+      <li><a href="Webrakugaki.html">落書き(WIP)</a></li>
     </ul>
   </header>
 
