--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <li class="top"><a href="index.html">トップ</a></li>
       <li><a href="hamprof.html">プロフィール</a></li>
       <li><a href="syasin.html">写真集</a></li>
-      <li><a href="Webrakugaki.html">落書き</a></li>
+      <li><a href="Webrakugaki.html">落書き(WIP)</a></li>
     </ul>
   </header>
 
