--- a/hamprof.html
+++ b/hamprof.html
@@ -33,8 +33,11 @@
   <br>
   <br>
   <div class="hutozi-center">あんみつのホームページ</div>
-  <img src="/noindex/favicon.jpg">
 
+  <center>
+  <img src="/noindex/favicon.jpg">
+  </center>
+  
   <div class="htz-center">本名 : 蛹鈴㍽遘?譏</div>
 
   <div class="htz-center">血液型 : AB</div>
