--- a/index.html
+++ b/index.html
@@ -40,6 +40,21 @@
 
   <div class="htz-center">mail:hswiauerfr@hiuhfi4h87huis.cn</div>
   <div class="htz-center">血液型:AB</div>
+  <div class="htz-center">年齢 : 25</div>
+  <div class="htz-center"><a href="google.co.jp">Googleのやつ</a></div>
+  
+  <br>
+  <hr>
+  <br>
+  
+  <div class="center">当サイトの内容、テキスト、画像等の無断転載・無断使用を固く禁じます。
+    <br>
+    また、まとめサイト等への引用を厳禁致します。
+    <br>
+    お問い合わせはメールでご連絡をお願い致します。
+    <br>
+    ※最近、SNS上でKim Jong Unを名乗るアカウントがあるといった“なりすまし”の報告が寄せられておりますが、蛹鈴㍽遘?譏は一切行っておりませんので、ご注意ください
+  </div>
 
 </body>
 
