--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <img src="/noindex/favicon.jpg" alt="EDIT.jpg"><br>
 
-  <div class="htz-center">mail:hswiauerfr@hiuhfi4h87huis.cn</div>
+  <div class="htz-center"><a href="mail.html">mail:hswiauerfr@hiuhfi4h87huis.cn</a></div>
   <div class="htz-center">血液型:AB</div>
   <div class="htz-center">年齢 : 25</div>
   <div class="htz-center"><a href="google.co.jp">Googleのやつ</a></div>
