--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
 
   <div class="hutozi-center">ホームページ</div>
 
-  <img src="/noindex/favicon.jpg" alt="EDIT.jpg"><br>
-
+  <center>
+    <img src="/noindex/favicon.jpg" alt="EDIT.jpg"><br>
+  </center>
   <div class="htz-center"><a href="mail.html">mail:hswiauerfr@hiuhfi4h87huis.cn</a></div>
   <div class="htz-center">血液型:AB</div>
   <div class="htz-center">年齢 : 25</div>
