--- a/syasin.html
+++ b/syasin.html
@@ -71,7 +71,7 @@
   <br>
 
   <img src="/noindex/favicon.jpg" alt="" width="250" height="200">
-  <a href="/noindex/favicon.jpg" download="9.jpg"></a>
+  <a href="/noindex/favicon.jpg" download="9.jpg">ダウンロード</a>
 
 
   <br>
