--- a/Webrakugaki.html
+++ b/Webrakugaki.html
@@ -15,18 +15,17 @@
 
 <body style=" background-color: white;font-family:'Hiragino Sans' ">
 
-  <header class="header">
-    <div class="navtext-container">
-      <div class="navtext"></div>
-    </div>
-    <input type="checkbox" class="menu-btn" id="menu-btn">
-    <label for="menu-btn" class="menu-icon"><span class="navicon"></span></label>
-    <ul class="menu">
-      <li class="top"><a href="index.html">トップ</a></li>
+  <header>
+    <h1 class="h1">
+      <a href="./index.html">ホームページ</a>
+    </h1>
+    <nav class="pc">
+      <li><a href="./index.html">トップ</a></li>
       <li><a href="hamprof.html">プロフィール</a></li>
       <li><a href="syasin.html">写真集</a></li>
-      <li><a href="Webrakugaki.html">落書き(WIP)</a></li>
-    </ul>
+      <li><a href="mail.html">連絡(WIP)</a></li>
+      <li><a href="Webrakugaki.html">落書き</a></li>
+    </nav>
   </header>
 
   <br>
