--- a/mail.html
+++ b/mail.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <link rel="icon" href="/noindex/favicon.jpg" />
+  <link rel="stylesheet" href="style/reset.css">
+  <link rel="stylesheet" href="style/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ホームページ</title>
 </head>
 <body>
+
+  <header>
+    <h1 class="h1">
+      <a href="./index.html">ホームページ</a>
+    </h1>
+    <nav class="pc">
+      <li><a href="./index.html">トップ</a></li>
+      <li><a href="hamprof.html">プロフィール</a></li>
+      <li><a href="syasin.html">写真集</a></li>
+      <li><a href="mail.html">連絡(WIP)</a></li>
+      <li><a href="Webrakugaki.html">落書き</a></li>
+    </nav>
+  </header>
+
     <div class="">WIP</div>
 </body>
 </html>
