--- a/index.html
+++ b/index.html
@@ -14,21 +14,23 @@
 
 <body>
 
-  <header class="header">
-    <div class="navtext-container">
-      <div class="navtext"></div>
-    </div>
-    <input type="checkbox" class="menu-btn" id="menu-btn">
-    <label for="menu-btn" class="menu-icon"><span class="navicon"></span></label>
-    <ul class="menu">
-      <li class="top"><a href="index.html">トップ</a></li>
+  <header>
+    <h1 class="h1">
+      <a href="./index.html">ホームページ</a>
+    </h1>
+    <nav class="pc">
+      <li><a href="./index.html">トップ</a></li>
       <li><a href="hamprof.html">プロフィール</a></li>
       <li><a href="syasin.html">写真集</a></li>
-      <li><a href="Webrakugaki.html">落書き(WIP)</a></li>
-    </ul>
+      <li><a href="mail.html">連絡(WIP)</a></li>
+      <li><a href="Webrakugaki.html">落書き</a></li>
+    </nav>
   </header>
 
-  <!-- ほんへ -->
+  <br>
+  <br>
+  <br>
+  <br>
   <br>
   <br>
   <br>
@@ -43,11 +45,11 @@
   <div class="htz-center">血液型:AB</div>
   <div class="htz-center">年齢 : 25</div>
   <div class="htz-center"><a href="google.co.jp">Googleのやつ</a></div>
-  
+
   <br>
   <hr>
   <br>
-  
+
   <div class="center">当サイトの内容、テキスト、画像等の無断転載・無断使用を固く禁じます。
     <br>
     また、まとめサイト等への引用を厳禁致します。
