--- a/hamprof.html
+++ b/hamprof.html
@@ -5,7 +5,7 @@
   <meta name="format-detection" content="telephone=no" />
   <meta charset="UTF-8">
   <meta http-equiv="Content-Style-Type" content="text/css">
-  <title>ハムスターのホームページ</title>
+  <title>ホームページ</title>
   <link rel="stylesheet" href="style/reset.css">
   <link rel="stylesheet" href="style/style.css">
   <link rel="icon" href="/noindex/favicon.jpg" />
@@ -13,18 +13,17 @@
 
 <body>
 
-  <header class="header">
-    <div class="navtext-container">
-      <div class="navtext"></div>
-    </div>
-    <input type="checkbox" class="menu-btn" id="menu-btn">
-    <label for="menu-btn" class="menu-icon"><span class="navicon"></span></label>
-    <ul class="menu">
-      <li class="top"><a href="index.html">トップ</a></li>
+  <header>
+    <h1 class="h1">
+      <a href="./index.html">ホームページ</a>
+    </h1>
+    <nav class="pc">
+      <li><a href="./index.html">トップ</a></li>
       <li><a href="hamprof.html">プロフィール</a></li>
       <li><a href="syasin.html">写真集</a></li>
-      <li><a href="Webrakugaki.html">落書き(WIP)</a></li>
-    </ul>
+      <li><a href="mail.html">連絡(WIP)</a></li>
+      <li><a href="Webrakugaki.html">落書き</a></li>
+    </nav>
   </header>
 
   <!-- ほんへ -->
