--- a/Webrakugaki.html
+++ b/Webrakugaki.html
@@ -16,9 +16,9 @@
 <body style=" background-color: white;font-family:'Hiragino Sans' ">
 
   <header>
-    <h1 class="h1">
-      <a href="./index.html">ホームページ</a>
-    </h1>
+    <center>
+      <a href="./index.html">ホームページ</a><br>
+    </center>
     <nav class="pc">
       <li><a href="./index.html">トップ</a></li>
       <li><a href="hamprof.html">プロフィール</a></li>
