--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
 
   <header>
-    <h1 class="h1">
-      <a href="./index.html">ホームページ</a>
-    </h1>
+    <center>
+      <a href="./index.html">ホームページ</a><br>
+    </center>
     <nav class="pc">
       <li><a href="./index.html">トップ</a></li>
       <li><a href="hamprof.html">プロフィール</a></li>
