--- a/syasin.html
+++ b/syasin.html
@@ -21,7 +21,7 @@
       <li><a href="./index.html">トップ</a></li>
       <li><a href="hamprof.html">プロフィール</a></li>
       <li><a href="syasin.html">写真集</a></li>
-      <li><a href="mail.html">連絡(WIP)</a></li>
+      <li><a href="mail.html">連絡</a></li>
       <li><a href="Webrakugaki.html">落書き</a></li>
     </nav>
   </header>
