--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 
   <header>
     <center>
-      <a href="./index.html">ホームページ</a><br>
+      <a href="./index.html">ホームページ</a>
     </center>
+    <br>
     <nav class="pc">
       <li><a href="./index.html">トップ</a></li>
       <li><a href="hamprof.html">プロフィール</a></li>
       <li><a href="syasin.html">写真集</a></li>
-      <li><a href="mail.html">連絡(WIP)</a></li>
+      <li><a href="mail.html">連絡</a></li>
       <li><a href="Webrakugaki.html">落書き</a></li>
     </nav>
   </header>
