--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="format-detection" content="telephone=no" />
   <meta charset="UTF-8">
   <meta http-equiv="Content-Style-Type" content="text/css">
-  <title>ハムスターのホームページ</title>
+  <title>ホームページ</title>
   <link rel="icon" href="/noindex/favicon.jpg" />
   <link rel="stylesheet" href="style/reset.css">
   <link rel="stylesheet" href="style/style.css">
