--- a/Webrakugaki.html
+++ b/Webrakugaki.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="style/style.css">
   <script type="text/javascript" src="Webrakugaki/canvas.js"></script>
   <script src="Webrakgaki/easeljs-0.6.0.min.js"></script>
-  <title>落書き</title>
+  <title>ホームページ</title>
 </head>
 
 <body style=" background-color: white;font-family:'Hiragino Sans' ">
