--- a/hamprof.html
+++ b/hamprof.html
@@ -31,17 +31,11 @@
   <br>
   <br>
   <br>
-  <div class="hutozi-center">あんみつのホームページ</div>
+  <div class="hutozi-center">ホームページ</div>
 
   <center>
     <img src="/noindex/favicon.jpg">
   </center>
-
-  <div class="htz-center">本名 : 蛹鈴㍽遘?譏</div>
-
-  <div class="htz-center">血液型 : AB</div>
-
-  <div class="htz-center">学歴 : 縺ｯ繧?縺ｭ縺薙☆縺?〓縺溘?繧後ｓ繝ｼ</div>
 
 </body>
 
