--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <center>
     <img src="/noindex/favicon.jpg" alt="EDIT.jpg"><br>
   </center>
-  <div class="htz-center"><a href="mail.html">mail:hswiauerfr@hiuhfi4h87huis.cn</a></div>
+  <div class="htz-center"><a href="mail.html">mail</a></div>
   <div class="htz-center">血液型:AB</div>
   <div class="htz-center">年齢 : 25</div>
   <div class="htz-center"><a href="google.co.jp">Googleのやつ</a></div>
