--- a/hamprof.html
+++ b/hamprof.html
@@ -13,18 +13,22 @@
 
 <body>
 
-  <header>
-    <center>
-      <a href="./index.html">ホームページ</a><br>
-    </center>
-    <nav class="pc">
+   <header class="header">
+    <div class="navtext-container">
+      <div class="navtext">company</div>
+    </div>
+    <input type="checkbox" class="menu-btn" id="menu-btn">
+    <label for="menu-btn" class="menu-icon"><span class="navicon"></span></label>
+    <ul class="menu">
       <li><a href="./index.html">トップ</a></li>
       <li><a href="hamprof.html">プロフィール</a></li>
       <li><a href="syasin.html">写真集</a></li>
       <li><a href="mail.html">連絡</a></li>
       <li><a href="Webrakugaki.html">落書き</a></li>
-    </nav>
+    </ul>
+
   </header>
+ 
 
   <!-- ほんへ -->
   <br>
