--- a/syasin.html
+++ b/syasin.html
@@ -15,7 +15,7 @@
 
    <header class="header">
     <div class="navtext-container">
-      <div class="navtext">company</div>
+      <div class="navtext"><li><a href="./index.html"></a></li></div>
     </div>
     <input type="checkbox" class="menu-btn" id="menu-btn">
     <label for="menu-btn" class="menu-icon"><span class="navicon"></span></label>
