--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
    <header class="header">
     <div class="navtext-container">
-      <div class="navtext">company</div>
+      <div class="navtext"><a href="./index.html"></a></div>
     </div>
     <input type="checkbox" class="menu-btn" id="menu-btn">
     <label for="menu-btn" class="menu-icon"><span class="navicon"></span></label>
