--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
    <header class="header">
     <div class="navtext-container">
-      <a class="navtext" href="./index.html">index</a>
+      <a class="navtext" href="./index.html">TOP</a>
     </div>
     <input type="checkbox" class="menu-btn" id="menu-btn">
     <label for="menu-btn" class="menu-icon"><span class="navicon"></span></label>
