--- a/hamprof.html
+++ b/hamprof.html
@@ -15,7 +15,7 @@
 
    <header class="header">
     <div class="navtext-container">
-      <div class="navtext">company</div>
+      <a class="navtext" href="./index.html">TOP</a>
     </div>
     <input type="checkbox" class="menu-btn" id="menu-btn">
     <label for="menu-btn" class="menu-icon"><span class="navicon"></span></label>
