--- a/Webrakugaki.html
+++ b/Webrakugaki.html
@@ -38,8 +38,8 @@
   <br>
   <br>
 
-  <button style="color:white;background-color:black;width:50px;height:50px;" onclick="black()">black</button>
-  <button style="color:white;background-color:red;width:50px;height:50px;" onclick="red()">red</button>
+  <button onclick="black()">black</button>
+  <button onclick="red()">red</button>
 
   <br>
   <br>
