--- a/Webrakugaki.html
+++ b/Webrakugaki.html
@@ -8,6 +8,7 @@
   <meta http-equiv="Content-Language" content="ja">
   <link rel="stylesheet" href="style/reset.css">
   <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="Webrakugaki/rakugakistyle.css">
   <script type="text/javascript" src="Webrakugaki/canvas.js"></script>
   <script src="Webrakgaki/easeljs-0.6.0.min.js"></script>
   <title>ホームページ</title>
@@ -43,7 +44,7 @@
 
   <br>
   <br>
-  <canvas id="myCanvas" width="3000" height="3000"
+  <canvas id="myCanvas" style=
     style="width:2041px;height:1011px; color: #333333; background: #ffffff none repeat scroll 0% 0%; border: 1px solid #cccccc; "></canvas>
 
 
