--- a/Webrakugaki.html
+++ b/Webrakugaki.html
@@ -44,7 +44,7 @@
 
   <br>
   <br>
-  <canvas id="myCanvas" style=
+  <canvas id="myCanvas" class="style"
     style="width:2041px;height:1011px; color: #333333; background: #ffffff none repeat scroll 0% 0%; border: 1px solid #cccccc; "></canvas>
 
 
