--- a/Webrakugaki.html
+++ b/Webrakugaki.html
@@ -43,8 +43,7 @@
 
   <br>
   <br>
-  <canvas id="myCanvas" class="style"
-    style="width:2041px;height:1011px; color: #333333; background: #ffffff none repeat scroll 0% 0%; border: 1px solid #cccccc; "></canvas>
+  <canvas id="myCanvas" class="style"></canvas>
 
 <style>
   .style {
