--- a/Webrakugaki.html
+++ b/Webrakugaki.html
@@ -49,6 +49,9 @@
   .style {
     width: fit-content;
     height: fit-content;
+    color: #333333;
+    background: #ffffff none repeat scroll 0% 0%;
+    border: 1px solid #cccccc;
   }
 </style>
 
