--- a/Webrakugaki.html
+++ b/Webrakugaki.html
@@ -47,8 +47,8 @@
 
 <style>
   .style {
-    width: max-content;
-    height: max-content;
+    width: auto;
+    height: auto;
     color: #333333;
     background: #ffffff none repeat scroll 0% 0%;
     border: 1px solid #cccccc;
