--- a/Webrakugaki.html
+++ b/Webrakugaki.html
@@ -43,7 +43,8 @@
 
   <br>
   <br>
-  <canvas id="myCanvas" class="style"></canvas>
+  <canvas id="myCanvas"
+    style="width: auto; height: auto; color: #333333; background: #ffffff none repeat scroll 0% 0%; border: 1px solid #cccccc;"></canvas>
 
 <style>
   .style {
