--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <div class="htz-center"><a href="mail.html">mail</a></div>
   <div class="htz-center">血液型:AB</div>
   <div class="htz-center">年齢 : 25</div>
-  <div class="htz-center"><a href="google.co.jp">Googleのやつ</a></div>
+  <div class="htz-center"><a href="https://google.co.jp">Googleのやつ</a></div>
 
   <br>
   <hr>
