--- a/yti.html
+++ b/yti.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
+    <meta name="format-detection" content="telephone=no" />
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta http-equiv="Content-Style-Type" content="text/css">
+    <title>ホームページ</title>
+    <link rel="icon" href="/noindex/favicon.jpg" />
+    <link rel="stylesheet" href="style/reset.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
+
 <body>
-    
+
+    <header class="header">
+        <div class="navtext-container">
+            <a class="navtext" href="./index.html">TOP</a>
+        </div>
+        <input type="checkbox" class="menu-btn" id="menu-btn">
+        <label for="menu-btn" class="menu-icon"><span class="navicon"></span></label>
+        <ul class="menu">
+            <li><a href="./index.html">トップ</a></li>
+            <li><a href="hamprof.html">プロフィール</a></li>
+            <li><a href="syasin.html">写真集</a></li>
+            <li><a href="mail.html">連絡</a></li>
+            <li><a href="Webrakugaki.html">落書き</a></li>
+        </ul>
+
+    </header>
+
+    <div class="hut">
+        <div class="icn"></div>
+    </div>
 </body>
+
 </html>
