--- a/yti.html
+++ b/yti.html
@@ -7,7 +7,6 @@
     <meta http-equiv="Content-Style-Type" content="text/css">
     <title>ホームページ</title>
     <link rel="icon" href="/noindex/favicon.jpg" />
-    <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/style.css">
 </head>
 
@@ -29,9 +28,36 @@
 
     </header>
 
+    <br>
+    <br>
+
     <div class="hut">
-        <div class="icn"></div>
+        <div class="icn">部活予定</div>
     </div>
+
+    <div>
+    <table border="1">
+        <tr>
+            <th>日曜日</th>
+            <th>月曜日</th>
+            <th>火曜日</th>
+            <th>水曜日</th>
+            <th>木曜日</th>
+            <th>金曜日</th>
+            <th>土曜日</th>
+        </tr>
+        <tr>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+        </tr>
+    </table>
+    </div>
+
 </body>
 
 </html>
