--- a/yti.html
+++ b/yti.html
@@ -35,7 +35,7 @@
         <div class="icn">部活予定</div>
     </div>
 
-    <div>
+    <!-- 
     <table border="1">
         <tr>
             <th>日曜日</th>
@@ -56,7 +56,28 @@
             <th></th>
         </tr>
     </table>
-    </div>
+ -->
+
+    <table border="1">
+        <tr>
+            <th>日曜日</th>
+            <th>月曜日</th>
+            <th>火曜日</th>
+            <th>水曜日</th>
+            <th>木曜日</th>
+            <th>金曜日</th>
+            <th>土曜日</th>
+        </tr>
+        <tr>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+        </tr>
+    </table>
 
 </body>
 
