--- a/yti.html
+++ b/yti.html
@@ -34,8 +34,8 @@
     <div class="hut">
         <div class="icn">部活予定</div>
     </div>
-
-    <!-- 
+<!-- 
+    <div>202○年○月○日</div>
     <table border="1">
         <tr>
             <th>日曜日</th>
@@ -55,9 +55,9 @@
             <th></th>
             <th></th>
         </tr>
-    </table>
- -->
+    </table> -->
 
+    <div>202○年○月○日</div>
     <table border="1">
         <tr>
             <th>日曜日</th>
