--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <center>
     <img src="/noindex/favicon.jpg" alt="EDIT.jpg"><br>
   </center>
-  <div class="htz-center"><a href="mail.html">mail</a></div>
+  <div class="htz-center"><a href="xamst.html">mail</a></div>
   <div class="htz-center">血液型:AB</div>
   <div class="htz-center">年齢 : 25</div>
   <div class="htz-center"><a href="https://google.co.jp">Googleのやつ</a></div>
