--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </center>
   <div class="htz-center"><a href="xamst.html">mail</a></div>
   <div class="htz-center">血液型:AB</div>
-  <div class="htz-center">年齢 : 25</div>
+  <div class="htz-center">年齢 :</div>
   <div class="htz-center"><a href="https://google.co.jp">Googleのやつ</a></div>
 
   <br>
